--- a/.github/workflows/preprocess_data.yml
+++ b/.github/workflows/preprocess_data.yml
@@ -1,8 +1,10 @@
-name: get_data
+name: preprocess_data
 on:
   schedule:
     - cron: "* * * * *"
-
+  push:
+    branches:
+      - main
 jobs:
   uv-example:
     name: python
