--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,4 +30,5 @@ dependencies = [
     "dotenv>=0.9.9",
     "adbc-driver-manager>=1.5.0",
     "adbc-driver-postgresql>=1.5.0",
+    "geojson>=3.2.0",
 ]
