Migrate UI from Streamlit to FastAPI+Dash with improved date/time picker and location search
Replace single datetime dropdown with day tabs + time slot pill buttons.
Fix location dropdown: remove duplicate region labels, skip misleading
nearest-area matches for distant takeoffs, fix search bar positioning.
Entrypoint is now uvicorn serving src.web.main:app.

--- a/fly.toml
+++ b/fly.toml
@@ -20,4 +20,4 @@ primary_region = "arn"
     timeout = "10s"
     grace_period = "20s"
     method = "GET"
-    path = "/"
+    path = "/api/health"
