--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,4 +32,7 @@ dependencies = [
     "adbc-driver-postgresql>=1.5.0",
     "geojson>=3.2.0",
     "pytz>=2025.1",
+    "fastapi>=0.116.1",
+    "uvicorn>=0.35.0",
+    "dash>=3.2.0",
 ]
