Redesign windgram: embed Yr icons in Plotly figure, clickable time selection with column highlight, disable zoom/pan, fix wind altitude grid and polars join_asof warning

--- a/.github/workflows/preprocess_data.yml
+++ b/.github/workflows/preprocess_data.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Run data fetch
         run: uv run python preprocess_forecast.py
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
           TRIGGER_SOURCE: ${{ github.event_name }}
