Fix CI: add pyarrow dep, pin Python 3.11, replace requirements.txt with uv sync
The ADBC driver import failed in CI because pyarrow was missing.
Dockerfile now uses uv sync with pyproject.toml+uv.lock instead of
pip install from requirements.txt, eliminating the duplicate dep list.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "adbc-driver-manager>=1.5.0",
     "adbc-driver-postgresql>=1.5.0",
+    "pyarrow>=18.0.0",
     "geojson>=3.2.0",
     "pytz>=2025.1",
     "fastapi>=0.116.1",
