--- a/.github/workflows/preprocess_data.yml
+++ b/.github/workflows/preprocess_data.yml
@@ -6,10 +6,17 @@ on:
   push:
     branches:
       - main
+
+# Cancel in-progress runs when a new run starts (same workflow)
+concurrency:
+  group: preprocess-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   meps-pipeline:
     name: MEPS forecast pipeline
     runs-on: ubuntu-latest
+    timeout-minutes: 20
 
     steps:
       - uses: actions/checkout@v4
@@ -31,6 +38,7 @@ jobs:
   icon-eu-pipeline:
     name: ICON-EU forecast pipeline
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - uses: actions/checkout@v4
@@ -49,7 +57,7 @@ jobs:
         run: uv sync --all-extras --dev
 
       - name: Run ICON-EU Norway pipeline
-        run: uv run python preprocess_icon.py --model icon-eu --region norway
+        run: uv run python preprocess_icon.py --model icon-eu --region norway --max-hours 30
         env:
           SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
           TRIGGER_SOURCE: ${{ github.event_name }}
